Correções de bugs e implementação do JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+#faz a busca em variável de ambiente, após o : significa que é um valor fixo caso não achar
+api.security.token={JWT_TOKEN:12345678}
